add global makefile

--- a/dmenu/Makefile
+++ b/dmenu/Makefile
@@ -3,27 +3,33 @@
 
 include config.mk
 
+TOPBUILDDIR ?= ..
+BIN_DIR = $(TOPBUILDDIR)/bin
+
 SRC = drw.c dmenu.c stest.c util.c
 OBJ = $(SRC:.c=.o)
+OBJ := $(addprefix $(BIN_DIR)/, $(notdir $(OBJ)))
 
-all: dmenu stest
+all: $(BIN_DIR)/dmenu $(BIN_DIR)/stest
 
-.c.o:
-	$(CC) -c $(CFLAGS) $<
+# Compile object files into bin/
+$(BIN_DIR)/%.o: %.c
+	mkdir -p $(BIN_DIR)
+	$(CC) -c $(CFLAGS) $< -o $@
 
 config.h:
 	cp config.def.h $@
 
 $(OBJ): arg.h config.h config.mk drw.h
 
-dmenu: dmenu.o drw.o util.o
-	$(CC) -o $@ dmenu.o drw.o util.o $(LDFLAGS)
+$(BIN_DIR)/dmenu: $(BIN_DIR)/dmenu.o $(BIN_DIR)/drw.o $(BIN_DIR)/util.o
+	$(CC) -o $@ $(BIN_DIR)/dmenu.o $(BIN_DIR)/drw.o $(BIN_DIR)/util.o $(LDFLAGS)
 
-stest: stest.o
-	$(CC) -o $@ stest.o $(LDFLAGS)
+$(BIN_DIR)/stest: $(BIN_DIR)/stest.o
+	$(CC) -o $@ $(BIN_DIR)/stest.o $(LDFLAGS)
 
 clean:
-	rm -f dmenu stest $(OBJ) dmenu-$(VERSION).tar.gz
+	rm -f $(BIN_DIR)/dmenu $(BIN_DIR)/stest $(OBJ) dmenu-$(VERSION).tar.gz
 
 dist: clean
 	mkdir -p dmenu-$(VERSION)
@@ -36,7 +42,7 @@ dist: clean
 
 install: all
 	mkdir -p $(DESTDIR)$(PREFIX)/bin
-	cp -f dmenu dmenu_path dmenu_run stest $(DESTDIR)$(PREFIX)/bin
+	cp -f $(BIN_DIR)/dmenu dmenu_path dmenu_run $(BIN_DIR)/stest $(DESTDIR)$(PREFIX)/bin
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu_path
 	chmod 755 $(DESTDIR)$(PREFIX)/bin/dmenu_run
